[project]
name = "weightedstate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Uriah Finkel", email = "ufinkel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.35.1",
]

[project.scripts]
weightedstate = "weightedstate:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.17.6",
    "polars>=1.35.1",
    "quartodoc>=0.11.1",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]
